# hush

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
bindings/go/: go.mod
bindings/go/hushspec/: extensions.go  schema.go  validate.go  version.go
bindings/python/hushspec/: __init__.py  extensions.py  rules.py  schema.py  validate.py  version.py
bindings/python/hushspec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/python/tests/: test_parse.py
crates/hushspec/: Cargo.toml  README.md
crates/hushspec-cli/: Cargo.toml  README.md
crates/hushspec-cli/src/: cmd_audit.rs  cmd_diff.rs  cmd_fmt.rs  cmd_init.rs  cmd_keygen.rs  cmd_lint.rs  cmd_panic.rs  cmd_sign.rs  cmd_test.rs  cmd_validate.rs  cmd_verify.rs  main.rs
crates/hushspec-cli/tests/: cli_tests.rs
crates/hushspec-testkit/: Cargo.toml
crates/hushspec-testkit/src/: fixture.rs  lib.rs  main.rs  runner.rs
crates/hushspec/src/: conditions.rs  detection.rs  evaluate.rs  extensions.rs  generated_contract.rs  generated_models.rs  governance.rs  lib.rs  merge.rs  panic.rs  receipt.rs  resolve.rs  rules.rs  schema.rs  signing.rs  sink.rs  validate.rs  version.rs
crates/hushspec/tests/: conditions.rs  detection.rs  evaluate.rs  extensions.rs  merge.rs  parse.rs  receipt.rs  resolve.rs  signing.rs  sink.rs
docs/: book.toml
docs/plans/: 01-evaluation-engine.md  02-audit-trail.md  03-policy-cli.md  04-governance-security.md  05-runtime-integration.md  06-detection-observability.md  07-conditional-rules-library.md  08-extends-remote-loading.md  ROADMAP.md
docs/src/: SUMMARY.md  action-types.md  core-spec.md  introduction.md  merge-semantics.md  rules-reference.md
docs/src/extensions/: detection.md  origins.md  posture.md
docs/src/guides/: clawdstrike.md  first-policy.md  getting-started.md
docs/src/reference/: conformance.md  json-schema.md  versioning.md
fixtures/core/evaluation/: computer-use.test.yaml  egress.test.yaml  forbidden-paths.test.yaml  patch-integrity.test.yaml  secret-patterns.test.yaml  shell-commands.test.yaml  tool-access.test.yaml
fixtures/core/merge/: base.yaml  (+4 more)
rulesets/: ai-agent.yaml  cicd.yaml  default.yaml  panic.yaml  permissive.yaml  remote-desktop.yaml  strict.yaml
schemas/: hushspec-core.v0.schema.json  hushspec-detection.v0.schema.json  hushspec-origins.v0.schema.json  hushspec-posture.v0.schema.json  hushspec-receipt.v0.schema.json  hushspec-signature.v0.schema.json
scripts/: generate_sdk_contracts.py  generate_sdk_models.py  generate_ts_builtins.py
spec/: hushspec-core.md  hushspec-detection.md  hushspec-origins.md  hushspec-posture.md  versioning.md
(+19 files in other folders)
