[package]
name = "hushspec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for validating, testing, and scaffolding HushSpec policies"

[[bin]]
name = "h2h"
path = "src/main.rs"

[dependencies]
hushspec = { version = "0.1.0", path = "../hushspec", features = ["signing"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = "0.18"
regex = "1"
thiserror = "2"
anyhow = "1"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
