[package]
name = "hushspec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Portable specification types for AI agent security rules"
repository = "https://github.com/backbay-labs/hush"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], optional = true }
url = { version = "2", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["std"]
std = []
http = ["dep:reqwest", "dep:url"]
signing = ["dep:ed25519-dalek", "dep:base64", "dep:rand"]
